fixed header and working on aligning articles.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,11 +12,15 @@
 header {
 	background-color: #333333;
 	color: #ededed;
+	top: 0;
+	left: 0;
+	position: fixed;
 	//display: flex;
-	flex-wrap: wrap;
+	//flex-wrap: wrap;
 	//justify-content: space-around;
 	width: 100%;
 	height: 85px;
+	z-index: 1000;
 }
 .logo {
 	float: left;
@@ -33,6 +37,9 @@ header {
 	padding: 20px;
 	margin-top: 10px;
 }
+.main-nav {
+	padding-top: 85px;
+}
 .article-wrapper {
 	display: flex;
 	flex-flow: row wrap;
@@ -40,17 +47,18 @@ header {
 	align-content: flex-start;
 	overflow: hidden;
 	//width: calc((100%-60px)/3);
-	margin-right: 150px;
-	margin-left: 150px;
+	padding-right: 120px;
+	padding-left: 120px;
 }
 .article1, .article2, .article3, .article4, .article5, .article6 {
 	text-align: left;
 	width: 320px;
 	color: #11191d;
+	padding: 20px;
 }
 img {
 	max-height: 190px;
-	width: 312px;
+	width: 290px;
 }
 .container {
 	width: 400px;
